currency pipe created , errors fixed
user accounts confirm password fixed,
user accounts global css applied,
invoice global css applied

--- a/Frontend/src/app/modules/invoices/components/invoices/invoices.component.html
+++ b/Frontend/src/app/modules/invoices/components/invoices/invoices.component.html
@@ -1,4 +1,4 @@
-<nz-breadcrumb>
+<nz-breadcrumb id="breadcrumb">
   <nz-breadcrumb-item>Home</nz-breadcrumb-item>
   <nz-breadcrumb-item>
     <a routerLink="/app/modules">Dashboard</a>
@@ -6,19 +6,26 @@
   <nz-breadcrumb-item>Invoices</nz-breadcrumb-item>
 </nz-breadcrumb>
 
-<nz-content>
-  <div class="cbutton" >
+<nz-content id="component-content">
+  <div id="search-create">
     <nz-input-group [nzSuffix]="suffixIconSearch" class="searchInput">
-      <input type="text" nz-input placeholder="Search" [(ngModel)]="searchText"/>
+      <input
+        type="text"
+        nz-input
+        placeholder="Search"
+        [(ngModel)]="searchText"
+      />
     </nz-input-group>
     <ng-template #suffixIconSearch>
       <span nz-icon nzType="search"></span>
     </ng-template>
-    <button nz-button nzType="default" (click)="create()">Create</button>
+    <button nz-button nzType="default" (click)="create()">
+      Add &nbsp; <i class="fa-solid fa-plus"></i>
+    </button>
   </div>
   <nz-table
-  #basicTable
-  [nzData]="invoice_info"
+    #basicTable
+    [nzData]="invoice_info"
     nzShowPagination
     nzShowSizeChanger
     [nzPageSizeOptions]="[5, 10, 15, 20]"
@@ -39,20 +46,31 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let data of basicTable.data | globalTablesearch: searchText, let i=index">
-        <td>{{ i+1 }}</td>
+      <tr
+        *ngFor="
+          let data of basicTable.data | globalTablesearch : searchText;
+          let i = index
+        "
+      >
+        <td>{{ i + 1 }}</td>
         <td>{{ data.invoice_item }}</td>
-        <td>{{ v_name[data.vendor_id]}}</td>
+        <td>{{ v_name[data.vendor_id] }}</td>
         <td>{{ data.quantity }}</td>
-        <td>{{ data.amount}}</td>
-        <td>{{ data.trnsx_type}}</td>
-        <td>{{ data.tax}}</td>
-        <td>{{ data.total}}</td>
-        <td>{{ d_name[data.department_id]}}</td>
+        <td>{{ data.amount }}</td>
+        <td>{{ data.trnsx_type }}</td>
+        <td>{{ data.tax }}</td>
+        <td>{{ data.total | currencyIn }}</td>
+        <td>{{ d_name[data.department_id] }}</td>
         <td>{{ data.created_date | date : "dd-MM-YYYY hh:mm aaa" }}</td>
         <td>
-          <div class="editbtn">
-            <a (click)="edit(data)">Edit</a> / <a (click)="edit(data)">view</a>
+          <div id="editbtn">
+            <a nz-tooltip="Edit" (click)="edit(data)"
+              ><i class="fa-regular fa-pen-to-square"></i
+            ></a>
+            <b> / </b>
+            <a nz-tooltip="View" (click)="edit(data)"
+              ><i class="fa-regular fa-eye"></i
+            ></a>
           </div>
         </td>
       </tr>
@@ -67,40 +85,55 @@
   [nzTitle]="drawerTitle"
   [nzFooter]="footerTpl"
   (nzOnClose)="close()"
+  [nzClosable]="false"
+  [nzCloseIcon]="icon"
+  [nzExtra]="icon"
 >
-  <form nz-form *nzDrawerContent [formGroup]="invoiceForm">
-
+  <ng-template #icon>
+    <i (click)="close()" class="fa-solid fa-circle-xmark"></i>
+  </ng-template>
+  <form nz-form *nzDrawerContent [formGroup]="invoiceForm" class="drawer-form">
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Vendor</nz-form-label>
         <nz-form-control nz-col nzSpan="10" nzErrorTip="Please Select Vendor">
           <nz-select
-          formControlName="vendor_id"
-          nzPlaceHolder="Vendor"
-          nzShowSearch
-        >
-        <nz-option *ngFor="let v of vendor_array" nzValue={{v.vendor_id}} nzLabel={{v.vendor_name}}></nz-option>
-
-        </nz-select>
+            formControlName="vendor_id"
+            nzPlaceHolder="Vendor"
+            nzShowSearch
+          >
+            <nz-option
+              *ngFor="let v of vendor_array"
+              nzValue="{{ v.vendor_id }}"
+              nzLabel="{{ v.vendor_name }}"
+            ></nz-option>
+          </nz-select>
         </nz-form-control>
-        
       </nz-form-item>
     </div>
 
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Description</nz-form-label>
-        <nz-form-control nz-col nzSpan="10" [nzErrorTip] = "invoiceErrorTip1">
+        <nz-form-control nz-col nzSpan="10" [nzErrorTip]="invoiceErrorTip1">
           <input
             nz-input
             formControlName="invoice_item"
             placeholder="Enter Invoice Item"
           />
           <ng-template #invoiceErrorTip1 let-control>
-            <ng-container *ngIf="control.hasError('required')">Please enter invoice item</ng-container>
-            <ng-container *ngIf="control.hasError('maxlength')">Maxlength exceeded<br /></ng-container>
-            <ng-container *ngIf="control.hasError('minlength')">Please enter atleast 10 characters<br /></ng-container>
-            <ng-container *ngIf="control.hasError('pattern')">Please enter valid input</ng-container>
+            <ng-container *ngIf="control.hasError('required')"
+              >Please enter invoice item</ng-container
+            >
+            <ng-container *ngIf="control.hasError('maxlength')"
+              >Maxlength exceeded<br
+            /></ng-container>
+            <ng-container *ngIf="control.hasError('minlength')"
+              >Please enter atleast 10 characters<br
+            /></ng-container>
+            <ng-container *ngIf="control.hasError('pattern')"
+              >Please enter valid input</ng-container
+            >
           </ng-template>
         </nz-form-control>
       </nz-form-item>
@@ -108,15 +141,20 @@
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Quantity</nz-form-label>
-        <nz-form-control nz-col nzSpan="10" [nzErrorTip] = "invoiceErrorTip2">
+        <nz-form-control nz-col nzSpan="10" [nzErrorTip]="invoiceErrorTip2">
           <input
             nz-input
             formControlName="quantity"
-            placeholder="Enter Quantity"  (keyup)="change()"
+            placeholder="Enter Quantity"
+            (keyup)="change()"
           />
           <ng-template #invoiceErrorTip2 let-control>
-            <ng-container *ngIf="control.hasError('required')">Please enter quantity</ng-container>
-            <ng-container *ngIf="control.hasError('pattern')">Invalid - Numbers Only</ng-container>
+            <ng-container *ngIf="control.hasError('required')"
+              >Please enter quantity</ng-container
+            >
+            <ng-container *ngIf="control.hasError('pattern')"
+              >Invalid - Numbers Only</ng-container
+            >
           </ng-template>
         </nz-form-control>
       </nz-form-item>
@@ -125,7 +163,7 @@
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Amount</nz-form-label>
-        <nz-form-control nz-col nzSpan="10" [nzErrorTip] = "invoiceErrorTip3">
+        <nz-form-control nz-col nzSpan="10" [nzErrorTip]="invoiceErrorTip3">
           <input
             nz-input
             formControlName="amount"
@@ -133,8 +171,12 @@
             (keyup)="change()"
           />
           <ng-template #invoiceErrorTip3 let-control>
-            <ng-container *ngIf="control.hasError('required')">Please enter amount</ng-container>
-            <ng-container *ngIf="control.hasError('pattern')">{{globalConstants.amountError}}</ng-container>
+            <ng-container *ngIf="control.hasError('required')"
+              >Please enter amount</ng-container
+            >
+            <ng-container *ngIf="control.hasError('pattern')">{{
+              globalConstants.amountError
+            }}</ng-container>
           </ng-template>
         </nz-form-control>
       </nz-form-item>
@@ -143,20 +185,22 @@
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Transaction Type</nz-form-label>
-        <nz-form-control nz-col nzSpan="10" nzErrorTip="Please Select Transaction Type">
-          <nz-select
-          formControlName="trnsx_type"
+        <nz-form-control
           nz-col
           nzSpan="10"
-          nzPlaceHolder="Transaction Type"
-          nzShowSearch
+          nzErrorTip="Please Select Transaction Type"
         >
-          <nz-option nzValue="debit" nzLabel="Debit"></nz-option>
-          <nz-option nzValue="credit" nzLabel="Credit"></nz-option>
-          <nz-option nzValue="refund" nzLabel="Refund"></nz-option>
-        </nz-select>
+          <nz-select
+            formControlName="trnsx_type"
+            nz-col
+            nzPlaceHolder="Transaction Type"
+            nzShowSearch
+          >
+            <nz-option nzValue="debit" nzLabel="Debit"></nz-option>
+            <nz-option nzValue="credit" nzLabel="Credit"></nz-option>
+            <nz-option nzValue="refund" nzLabel="Refund"></nz-option>
+          </nz-select>
         </nz-form-control>
-        
       </nz-form-item>
     </div>
 
@@ -171,10 +215,13 @@
             (keyup)="change()"
           />
           <ng-template #invoiceErrorTip4 let-control>
-            <ng-container *ngIf="control.hasError('required')">Please enter Tax</ng-container>
-            <ng-container *ngIf="control.hasError('pattern')">Invalid - Numbers Only</ng-container>
+            <ng-container *ngIf="control.hasError('required')"
+              >Please enter Tax</ng-container
+            >
+            <ng-container *ngIf="control.hasError('pattern')"
+              >Invalid - Numbers Only</ng-container
+            >
           </ng-template>
-
         </nz-form-control>
       </nz-form-item>
     </div>
@@ -196,19 +243,25 @@
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Department</nz-form-label>
-        <nz-form-control nz-col nzSpan="10" nzErrorTip="Please Select Department">
-          <nz-select
-          formControlName="department_id"
-          nzPlaceHolder="Department"
-          nzShowSearch
+        <nz-form-control
+          nz-col
+          nzSpan="10"
+          nzErrorTip="Please Select Department"
         >
-        <nz-option *ngFor="let d of depts" nzValue={{d.department_id}} nzLabel={{d.department_name}}></nz-option>
-
-        </nz-select>
+          <nz-select
+            formControlName="department_id"
+            nzPlaceHolder="Department"
+            nzShowSearch
+          >
+            <nz-option
+              *ngFor="let d of depts"
+              nzValue="{{ d.department_id }}"
+              nzLabel="{{ d.department_name }}"
+            ></nz-option>
+          </nz-select>
         </nz-form-control>
       </nz-form-item>
     </div>
-
   </form>
 
   <ng-template #footerTpl>
