--- a/Frontend/src/app/modules/user-accounts/components/user-accounts/user-accounts.component.html
+++ b/Frontend/src/app/modules/user-accounts/components/user-accounts/user-accounts.component.html
@@ -1,4 +1,4 @@
-<nz-breadcrumb>
+<nz-breadcrumb id="breadcrumb">
   <nz-breadcrumb-item>Home</nz-breadcrumb-item>
   <nz-breadcrumb-item>
     <a routerLink="/app/modules">Dashboard</a>
@@ -6,8 +6,8 @@
   <nz-breadcrumb-item>User Accounts</nz-breadcrumb-item>
 </nz-breadcrumb>
 
-<nz-content>
-  <div class="cbutton">
+<nz-content id="component-content">
+  <div id="search-create">
     <nz-input-group [nzSuffix]="suffixIconSearch" class="searchInput">
       <input
         type="text"
@@ -19,7 +19,9 @@
     <ng-template #suffixIconSearch>
       <span nz-icon nzType="search"></span>
     </ng-template>
-    <button nz-button nzType="default" (click)="create()">Create</button>
+    <button nz-button nzType="default" (click)="create()">
+      Add &nbsp; <i class="fa-solid fa-plus"></i>
+    </button>
   </div>
   <nz-table
     #basicTable
@@ -52,8 +54,14 @@
         <td>{{ data.email }}</td>
         <td>{{ data.department_name }}</td>
         <td>
-          <div class="editbtn">
-            <a (click)="edit(data)">Edit</a> / <a (click)="edit(data)">view</a>
+          <div id="editbtn">
+            <a nz-tooltip="Edit" (click)="edit(data)"
+              ><i class="fa-regular fa-pen-to-square"></i
+            ></a>
+            <b> / </b>
+            <a nz-tooltip="View" (click)="edit(data)"
+              ><i class="fa-regular fa-eye"></i
+            ></a>
           </div>
         </td>
       </tr>
@@ -66,21 +74,23 @@
   [nzWidth]="720"
   [nzVisible]="visible"
   [nzFooter]="footerTpl"
+  [nzTitle]="drawerTitle"
   (nzOnClose)="close()"
+  [nzClosable]="false"
+  [nzCloseIcon]="icon"
+  [nzExtra]="icon"
 >
+  <ng-template #icon>
+    <i (click)="close()" class="fa-solid fa-circle-xmark"></i>
+  </ng-template>
   <form nz-form *nzDrawerContent [formGroup]="createUserForm">
     <ng-container>
       <div>
         <div>
-          <h1 class="text-center">{{ drawerTitle }}</h1>
-
           <form nz-form [formGroup]="createUserForm" nz-row>
             <nz-form-item nz-col nzSpan="12">
               <nz-form-label class="lab">First Name</nz-form-label>
-              <nz-form-control
-                [nzErrorTip]="firstNameErrTip"
-                class="create"
-              >
+              <nz-form-control [nzErrorTip]="firstNameErrTip" class="create">
                 <input
                   type="text"
                   nz-input
@@ -88,20 +98,25 @@
                   placeholder="First Name"
                 />
                 <ng-template #firstNameErrTip let-control>
-                  <ng-container *ngIf="control.hasError('required')">Please enter first name</ng-container>
-                  <ng-container *ngIf="control.hasError('minlength')">Please enter atleast 3 characters<br /></ng-container>
-                  <ng-container *ngIf="control.hasError('maxlength')">Maxlength exceeded<br /></ng-container>
-                  <ng-container *ngIf="control.hasError('pattern')">Please enter valid input<br /></ng-container>
+                  <ng-container *ngIf="control.hasError('required')"
+                    >Please enter first name</ng-container
+                  >
+                  <ng-container *ngIf="control.hasError('minlength')"
+                    >Please enter atleast 3 characters<br
+                  /></ng-container>
+                  <ng-container *ngIf="control.hasError('maxlength')"
+                    >Maxlength exceeded<br
+                  /></ng-container>
+                  <ng-container *ngIf="control.hasError('pattern')"
+                    >Please enter valid input<br
+                  /></ng-container>
                 </ng-template>
               </nz-form-control>
             </nz-form-item>
 
             <nz-form-item nz-col nzSpan="12">
               <nz-form-label>Last Name</nz-form-label>
-              <nz-form-control
-                [nzErrorTip]="lastNameErrTip"
-                class="create"
-              >
+              <nz-form-control [nzErrorTip]="lastNameErrTip" class="create">
                 <input
                   type="text"
                   nz-input
@@ -109,20 +124,25 @@
                   placeholder="Last Name"
                 />
                 <ng-template #lastNameErrTip let-control>
-                  <ng-container *ngIf="control.hasError('required')">Please enter last name</ng-container>
-                  <ng-container *ngIf="control.hasError('minlength')">Please enter atleast 3 characters<br /></ng-container>
-                  <ng-container *ngIf="control.hasError('maxlength')">Maxlength exceeded<br /></ng-container>
-                  <ng-container *ngIf="control.hasError('pattern')">Please enter valid input<br /></ng-container>
+                  <ng-container *ngIf="control.hasError('required')"
+                    >Please enter last name</ng-container
+                  >
+                  <ng-container *ngIf="control.hasError('minlength')"
+                    >Please enter atleast 3 characters<br
+                  /></ng-container>
+                  <ng-container *ngIf="control.hasError('maxlength')"
+                    >Maxlength exceeded<br
+                  /></ng-container>
+                  <ng-container *ngIf="control.hasError('pattern')"
+                    >Please enter valid input<br
+                  /></ng-container>
                 </ng-template>
               </nz-form-control>
             </nz-form-item>
 
             <nz-form-item nz-col nzSpan="12">
               <nz-form-label>Email</nz-form-label>
-              <nz-form-control
-                [nzErrorTip]="emailErrorTip"
-                class="create"
-              >
+              <nz-form-control [nzErrorTip]="emailErrorTip" class="create">
                 <input
                   type="text"
                   nz-input
@@ -130,18 +150,19 @@
                   placeholder="Email"
                 />
                 <ng-template #emailErrorTip let-control>
-                  '<ng-container *ngIf="control.hasError('required')">Please enter email</ng-container>
-                  <ng-container *ngIf="control.hasError('pattern')">Please enter valid email<br /></ng-container>
+                  <ng-container *ngIf="control.hasError('required')"
+                    >Please enter email</ng-container
+                  >
+                  <ng-container *ngIf="control.hasError('pattern')"
+                    >Please enter valid email<br
+                  /></ng-container>
                 </ng-template>
               </nz-form-control>
             </nz-form-item>
 
             <nz-form-item nz-col nzSpan="12">
               <nz-form-label>User Name</nz-form-label>
-              <nz-form-control
-                [nzErrorTip]="userNameErrorTip"
-                class="create"
-              >
+              <nz-form-control [nzErrorTip]="userNameErrorTip" class="create">
                 <input
                   type="text"
                   nz-input
@@ -149,10 +170,18 @@
                   placeholder="User name"
                 />
                 <ng-template #userNameErrorTip let-control>
-                  <ng-container *ngIf="control.hasError('required')">Please enter user name</ng-container>
-                  <ng-container *ngIf="control.hasError('minlength')">Please enter atleast 8 characters<br /></ng-container>
-                  <ng-container *ngIf="control.hasError('maxlength')">Maxlength exceeded<br /></ng-container>
-                  <ng-container *ngIf="control.hasError('pattern')">Please enter valid input<br /></ng-container>
+                  <ng-container *ngIf="control.hasError('required')"
+                    >Please enter user name</ng-container
+                  >
+                  <ng-container *ngIf="control.hasError('minlength')"
+                    >Please enter atleast 8 characters<br
+                  /></ng-container>
+                  <ng-container *ngIf="control.hasError('maxlength')"
+                    >Maxlength exceeded<br
+                  /></ng-container>
+                  <ng-container *ngIf="control.hasError('pattern')"
+                    >Please enter valid input<br
+                  /></ng-container>
                 </ng-template>
               </nz-form-control>
             </nz-form-item>
@@ -169,29 +198,38 @@
                   formControlName="password_md5"
                   placeholder="Password"
                   autocomplete="new-password"
+                  (ngModelChange)="validateConfirmPassword()"
                 />
               </nz-form-control>
             </nz-form-item>
 
             <nz-form-item nz-col nzSpan="12">
               <nz-form-label>Confirm Password</nz-form-label>
-              <nz-form-control  class="create" nzErrorTip="Please confirm your password!">
+              <nz-form-control
+                class="create"
+                nzHasFeedback
+                [nzErrorTip]="passwordErrorTpl"
+              >
                 <input
                   type="password"
                   nz-input
                   formControlName="cnfrm_password_md5"
                   placeholder="Re-enter Password"
-                  
                 />
+                <ng-template #passwordErrorTpl let-control>
+                  <ng-container *ngIf="control.hasError('required')"
+                    >Please confirm your new password!</ng-container
+                  >
+                  <ng-container *ngIf="control.hasError('confirm')"
+                    >Password is inconsistent!</ng-container
+                  >
+                </ng-template>
               </nz-form-control>
             </nz-form-item>
 
             <nz-form-item nz-col nzSpan="12">
               <nz-form-label>Mobile Number</nz-form-label>
-              <nz-form-control
-                [nzErrorTip]="mobileErrorTip"
-                class="create"
-              >
+              <nz-form-control [nzErrorTip]="mobileErrorTip" class="create">
                 <input
                   type="text"
                   nz-input
@@ -199,15 +237,22 @@
                   placeholder="Mobile Number"
                 />
                 <ng-template #mobileErrorTip let-control>
-                  '<ng-container *ngIf="control.hasError('required')">Please enter mobile number</ng-container>
-                  <ng-container *ngIf="control.hasError('pattern')">Please enter valid Mobile Number<br /></ng-container>
+                  <ng-container *ngIf="control.hasError('required')"
+                    >Please enter mobile number</ng-container
+                  >
+                  <ng-container *ngIf="control.hasError('pattern')"
+                    >Please enter valid Mobile Number<br
+                  /></ng-container>
                 </ng-template>
               </nz-form-control>
             </nz-form-item>
 
             <nz-form-item nz-col nzSpan="12">
               <nz-form-label>Department</nz-form-label>
-              <nz-form-control class="create" nzErrorTip="Please Select Department">
+              <nz-form-control
+                class="create"
+                nzErrorTip="Please Select Department"
+              >
                 <nz-select
                   nzShowSearch
                   nzAllowClear
@@ -226,10 +271,7 @@
 
             <nz-form-item nz-col nzSpan="24">
               <nz-form-label style="margin-bottom: none">Address</nz-form-label>
-              <nz-form-control
-                [nzErrorTip]="addressErrorTip"
-                class="address"
-              >
+              <nz-form-control [nzErrorTip]="addressErrorTip" class="address">
                 <nz-input-group nzPrefixIcon="home">
                   <input
                     type="text"
@@ -238,12 +280,19 @@
                     placeholder="Address"
                   />
                   <ng-template #addressErrorTip let-control>
-                    <ng-container *ngIf="control.hasError('required')">Please enter address</ng-container>
-                    <ng-container *ngIf="control.hasError('minlength')">please enter atleast 15 characters<br /></ng-container>
-                    <ng-container *ngIf="control.hasError('maxlength')">Maximum length exceeded<br /></ng-container>
-                    <ng-container *ngIf="control.hasError('pattern')">Please enter valid input</ng-container>
+                    <ng-container *ngIf="control.hasError('required')"
+                      >Please enter address</ng-container
+                    >
+                    <ng-container *ngIf="control.hasError('minlength')"
+                      >please enter atleast 15 characters<br
+                    /></ng-container>
+                    <ng-container *ngIf="control.hasError('maxlength')"
+                      >Maximum length exceeded<br
+                    /></ng-container>
+                    <ng-container *ngIf="control.hasError('pattern')"
+                      >Please enter valid input</ng-container
+                    >
                   </ng-template>
-                  
                 </nz-input-group>
               </nz-form-control>
             </nz-form-item>
@@ -265,7 +314,10 @@
 
             <nz-form-item nz-col nzSpan="12">
               <nz-form-label>District</nz-form-label>
-              <nz-form-control class="create" nzErrorTip="Please Select District">
+              <nz-form-control
+                class="create"
+                nzErrorTip="Please Select District"
+              >
                 <nz-select
                   formControlName="district"
                   nzShowSearch
