--- a/Frontend/src/app/modules/accounting-details/components/accounting-details/accounting-details.component.html
+++ b/Frontend/src/app/modules/accounting-details/components/accounting-details/accounting-details.component.html
@@ -1,1 +1,61 @@
-<p>accounting-details works!</p>
+<nz-breadcrumb id="breadcrumb">
+    <nz-breadcrumb-item>Home</nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+      <a routerLink="/app/modules">Dashboard</a>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>Accounting Details</nz-breadcrumb-item>
+  </nz-breadcrumb>
+  
+  <nz-content id="component-content">
+    <div id="search-create">
+      <nz-input-group [nzSuffix]="suffixIconSearch">
+        <input
+          type="text"
+          nz-input
+          placeholder="Search"
+          [(ngModel)]="searchText"
+        />
+      </nz-input-group>
+      <ng-template #suffixIconSearch>
+        <span nz-icon nzType="search"></span>
+      </ng-template>
+    </div>
+  
+    <nz-table
+      #basicTable
+      [nzData]="accountDetails"
+      nzShowPagination
+      nzShowSizeChanger
+      [nzPageSizeOptions]="[5, 10, 15, 20]"
+    >
+      <thead>
+        <tr>
+          <th nzWidth="100px">S.No.</th>
+          <th>Banking</th>
+          <th>Cash</th>
+          <th>Cheque</th>
+          <th>Card</th>
+          <th>UPI</th>
+          <th>Total Balance</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr
+          *ngFor="
+            let data of basicTable.data | globalTablesearch : searchText;
+            let i = index
+          "
+        >
+          <td>{{ i + 1 }}</td>
+          <td>{{ data }}</td>
+          <td>{{ data }}</td>
+          <td>{{ data }}</td>
+          <td>{{ data }}</td>
+          <td>{{ data }}</td>
+          
+        </tr>
+      </tbody>
+    </nz-table>
+  </nz-content>
+  
+  
