--- a/Frontend/src/app/modules/works/components/works/works.component.html
+++ b/Frontend/src/app/modules/works/components/works/works.component.html
@@ -1,4 +1,4 @@
-<nz-breadcrumb>
+<nz-breadcrumb id="breadcrumb">
   <nz-breadcrumb-item>Home</nz-breadcrumb-item>
   <nz-breadcrumb-item>
     <a routerLink="/app/modules">Dashboard</a>
@@ -6,39 +6,57 @@
   <nz-breadcrumb-item>Works</nz-breadcrumb-item>
 </nz-breadcrumb>
 
-<nz-content>
-  <div class="cbutton" >
-    <nz-input-group [nzSuffix]="suffixIconSearch" class="searchInput">
-      <input type="text" nz-input placeholder="Search" [(ngModel)]="searchText"/>
+<nz-content id="component-content">
+  <div id="search-create">
+    <nz-input-group [nzSuffix]="suffixIconSearch">
+      <input
+        type="text"
+        nz-input
+        placeholder="Search"
+        [(ngModel)]="searchText"
+      />
     </nz-input-group>
     <ng-template #suffixIconSearch>
       <span nz-icon nzType="search"></span>
     </ng-template>
-    <button nz-button nzType="default" (click)="create()">Create</button>
+    <button nz-button nzType="default" (click)="create()">
+      Add &nbsp; <i class="fa-solid fa-plus"></i>
+    </button>
   </div>
   <nz-table
-  #basicTable
-  [nzData]="works"
+    #basicTable
+    [nzData]="works"
     nzShowPagination
     nzShowSizeChanger
     [nzPageSizeOptions]="[5, 10, 15, 20]"
   >
     <thead>
       <tr>
-        <th>S.No.</th>
+        <th nzWidth="100px">S.No.</th>
         <th>Works Name</th>
         <th>Created Date</th>
         <th>Actions</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let data of basicTable.data | globalTablesearch: searchText, let i=index">
-        <td>{{ i+1 }}</td>
+      <tr
+        *ngFor="
+          let data of basicTable.data | globalTablesearch : searchText;
+          let i = index
+        "
+      >
+        <td>{{ i + 1 }}</td>
         <td>{{ data.work_name }}</td>
-        <td>{{ data.created_date | date : "dd-MM-YYYY hh:mm aaa"}}</td>
+        <td>{{ data.created_date | date : "dd-MM-YYYY hh:mm aaa" }}</td>
         <td>
-          <div class="editbtn">
-            <a (click)="edit(data)">Edit</a> / <a (click)="edit(data)">view</a>
+          <div id="editbtn">
+            <a nz-tooltip="Edit" (click)="edit(data)"
+              ><i class="fa-regular fa-pen-to-square"></i
+            ></a>
+            <b> / </b>
+            <a nz-tooltip="View" (click)="edit(data)"
+              ><i class="fa-regular fa-eye"></i
+            ></a>
           </div>
         </td>
       </tr>
@@ -53,43 +71,55 @@
   [nzTitle]="drawerTitle"
   [nzFooter]="footerTpl"
   (nzOnClose)="close()"
+  [nzClosable]="false"
+  [nzCloseIcon]="icon"
+  [nzExtra]="icon"
 >
-<form nz-form *nzDrawerContent [formGroup]="workForm">
+  <ng-template #icon>
+    <i (click)="close()" class="fa-solid fa-circle-xmark"></i>
+  </ng-template>
+  <form nz-form *nzDrawerContent [formGroup]="workForm" class="drawer-form">
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Work Name</nz-form-label>
+        <nz-form-control nz-col nzSpan="10" [nzErrorTip]="worksErrorTip">
+          <input
+            nz-input
+            formControlName="work_name"
+            type="text"
+            nz-input
+            placeholder="please enter Work Name"
+          />
+          <ng-template #worksErrorTip let-control>
+            <ng-container *ngIf="control.hasError('required')"
+              >Please enter work name</ng-container
+            >
+            <ng-container *ngIf="control.hasError('pattern')"
+              >Please enter valid input<br
+            /></ng-container>
+            <ng-container *ngIf="control.hasError('minlength')"
+              >Please enter atleast 3 characters<br
+            /></ng-container>
+            <ng-container *ngIf="control.hasError('maxlength')"
+              >Maximum length exceeded</ng-container
+            >
+          </ng-template>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+  </form>
 
-  <div>
-    <nz-form-item>
-      <nz-form-label nz-col nzSpan="5">Work Name</nz-form-label>
-      <nz-form-control nz-col nzSpan="10" [nzErrorTip]="worksErrorTip">
-        <input
-          nz-input
-          formControlName="work_name"
-          type="text"
-          nz-input
-          placeholder="please enter Work Name"
-        />
-        <ng-template #worksErrorTip let-control>
-          <ng-container *ngIf="control.hasError('required')">Please enter work name</ng-container>
-            <ng-container *ngIf="control.hasError('pattern')">Please enter valid input<br /></ng-container>
-            <ng-container *ngIf="control.hasError('minlength')">Please enter atleast 3 characters<br /></ng-container>
-            <ng-container *ngIf="control.hasError('maxlength')">Maximum length exceeded</ng-container>
-        </ng-template>
-      </nz-form-control>
-    </nz-form-item>
-  </div>
-
-</form>
-
-<ng-template #footerTpl>
-  <div style="float: right">
-    <button nz-button style="margin-right: 8px" (click)="close()">
-      Cancel
-    </button>
-    <button nz-button *ngIf="submit" nzType="primary" (click)="onSubmit()">
-      Submit
-    </button>
-    <button nz-button *ngIf="!submit" nzType="primary" (click)="onUpdate()">
-      Update
-    </button>
-  </div>
-</ng-template>
+  <ng-template #footerTpl>
+    <div style="float: right">
+      <button nz-button style="margin-right: 8px" (click)="close()">
+        Cancel
+      </button>
+      <button nz-button *ngIf="submit" nzType="primary" (click)="onSubmit()">
+        Submit
+      </button>
+      <button nz-button *ngIf="!submit" nzType="primary" (click)="onUpdate()">
+        Update
+      </button>
+    </div>
+  </ng-template>
 </nz-drawer>
